<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@color/teal_700"
    tools:context="com.zybooks.gpacalculator.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/title"
            android:text="@string/title"
            android:layout_gravity="center"
            android:textColor="@color/color_TextView"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/gpa_result_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gpa"
            android:layout_margin="15dp"
            android:textColor="@color/color_TextView"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/total_gpa_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:textColor="@color/color_TextView"
            android:textSize="18sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/enter_grades"
            android:textSize="24sp"
            android:textColor="@color/color_TextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/must_be_uppercase_a_b_c_d_f"
            android:textSize="15sp"
            android:textColor="@color/color_TextView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15sp"
            android:paddingStart="20sp"
            android:paddingEnd="20sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade_1"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/grade1_edit_text"
                android:inputType="textCapCharacters"
                android:ems="5"
                android:importantForAutofill="no"
                android:hint="@string/a"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_marginStart="20dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15sp"
            android:paddingStart="20sp"
            android:paddingEnd="20sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade_2"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/grade2_edit_text"
                android:inputType="textCapCharacters"
                android:ems="5"
                android:importantForAutofill="no"
                android:hint="@string/a"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_marginStart="20dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15sp"
            android:paddingStart="20sp"
            android:paddingEnd="20sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade_3"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/grade3_edit_text"
                android:inputType="textCapCharacters"
                android:ems="5"
                android:importantForAutofill="no"
                android:hint="@string/a"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_marginStart="20dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15sp"
            android:paddingStart="20sp"
            android:paddingEnd="20sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade_4"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/grade4_edit_text"
                android:inputType="textCapCharacters"
                android:ems="5"
                android:importantForAutofill="no"
                android:hint="@string/a"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_marginStart="20dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15sp"
            android:paddingStart="20sp"
            android:paddingEnd="20sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade_5"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/grade5_edit_text"
                android:inputType="textCapCharacters"
                android:ems="5"
                android:importantForAutofill="no"
                android:hint="@string/a"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_marginStart="20dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/calc_button"
            android:text="@string/calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="calculateClick" />

    </LinearLayout>
</LinearLayout>
